--- a/Kapy.css
+++ b/Kapy.css
@@ -8,10 +8,10 @@
  * @source https://github.com/Eight-P/BD.8P/tree/master/Themes/T1
 */
 
-@import url(https://eight-p.github.io/BD.8P/Themes/T1/dist/T1.css);
+@import url(https://raw.githubusercontent.com/croquette2/KapyTheme/main/kapy2.css);
 
 :root {
-/*
+  /*
 ==> IMPORTANT <==
 
 - The Theme might not work properly when mixed with others.
@@ -31,130 +31,130 @@
 /*  Hide chat input buttons
 /*  -  0: Visible | 1: Hidden */
 
---hide-chatBtn-nitro: 1 ;
---hide-chatBtn-gif: 0 ;
---hide-chatBtn-sticker: 0 ;
---hide-chatBtn-emoji: 0 ;
---hide-chatBtn-apps: 0 ;
+  --hide-chatBtn-nitro: 1;
+  --hide-chatBtn-gif: 0;
+  --hide-chatBtn-sticker: 0;
+  --hide-chatBtn-emoji: 0;
+  --hide-chatBtn-apps: 0;
 
 
-/*  Reduce message buttons unless hovered
+  /*  Reduce message buttons unless hovered
 /*  -  0: Show all (default)
 /*  -  1: Reduce until hovered */
 
---reduce-messageBtns: 0 ;
+  --reduce-messageBtns: 0;
 
 
-/*  Hide emojis in message buttons
+  /*  Hide emojis in message buttons
 /*  -  0: Show all (default)
 /*  -  1: Hide until hovered
 /*  -  2: Hidden */
 
---hide-messageBtnEmojis: 1 ;
+  --hide-messageBtnEmojis: 1;
 
 
-/*  Button overlay in call view
+  /*  Button overlay in call view
 /*  -  0: Only show on hover (default)
 /*  -  1: Always show  */
 
---keep-voiceChannelBtns: 0 ;
+  --keep-voiceChannelBtns: 0;
 
 
-/*  Visualize chat input when focused/selected
+  /*  Visualize chat input when focused/selected
 /*  -  0: Off (default)
 /*  -  1: Highlight */
 
---highlight-focusedChatInput: 0 ;
+  --highlight-focusedChatInput: 0;
 
 
-/*  Show the URL next to a masked link
+  /*  Show the URL next to a masked link
 /*  -  0: Masked (default)
 /*  -  1: Show URL */
 
---unmask-links: 0 ;
+  --unmask-links: 0;
 
 
-/*  Nitro effects & decorations
+  /*  Nitro effects & decorations
 /*  -  0: Visible | 1: Hidden */
 
---hide-profileEffects: 0 ;
---hide-avatarDecorations: 0 ;
---hide-nameplates: 0 ;
---disable-roleGradients: 0 ;
---hide-reactionAnimations: 0 ;
+  --hide-profileEffects: 0;
+  --hide-avatarDecorations: 0;
+  --hide-nameplates: 0;
+  --disable-roleGradients: 0;
+  --hide-reactionAnimations: 0;
 
 
-/*  Clan tags
+  /*  Clan tags
 /*  -  0: Show all (default)
 /*  -  1: Hide in member list
 /*  -  2: hide all */
 
---hide-clanTags: 0 ;
+  --hide-clanTags: 0;
 
 
-/*  Folder background-style
+  /*  Folder background-style
 /*  -  0: No background
 /*  -  1: Background */
 
---serverBar-FolderStyle: 1 ;
+  --serverBar-FolderStyle: 1;
 
 
-/*  Space between server bar icons  */
+  /*  Space between server bar icons  */
 
---serverBar-Spacing: 17px ;
+  --serverBar-Spacing: 17px;
 
 
-/*  Scaler/Percentage value for icon size (can make the images look blurry)
+  /*  Scaler/Percentage value for icon size (can make the images look blurry)
 /*  -  100: default | lower number: smaller */
 
---serverBar-IconSize: 100 ;
+  --serverBar-IconSize: 100;
 
 
-/*  Backgrounds
+  /*  Backgrounds
 /*  -  can be links, colors or gradients (links must be HTTPS) */
 
---background-app: url(https://eight-p.github.io/BD.8P/Themes/T1/assets/Main-bg.jpg);
---background-server: url(https://eight-p.github.io/BD.8P/Themes/T1/assets/Server-bg.jpg);
+  --background-app: var(--background-tertiary);
+  --background-server: var(--background-secondary);
 
 
-/*  Background brightness
+  /*  Background brightness
 /*  -  lower: darker | higher: brighter */
 
---backgroundBrightness-app: 80 ;
---backgroundBrightness-server: 100 ;
+  --backgroundBrightness-app: 80;
+  --backgroundBrightness-server: 100;
 
 
-/*  Background blur effect
+  /*  Background blur effect
 /*  -  0: Off | higher number: more blur */
 
---backgroundBlur-app: 0 ;
---backgroundBlur-server: 0 ;
+  --backgroundBlur-app: 0;
+  --backgroundBlur-server: 0;
 
 
-/*  Friend activities section in home tab
+  /*  Friend activities section in home tab
 /*  -  0: Always show (default)
 /*  -  1: Hide when empty
 /*  -  2: Always Hide */
 
---hide-friendsActivity: 1 ;
+  --hide-friendsActivity: 1;
 
 
-/*  Server boost goal in the channel sidebar
+  /*  Server boost goal in the channel sidebar
 /*  -  0: Visible (default)
 /*  -  1: Hidden */
 
---hide-serverBoostStats: 0 ;
+  --hide-serverBoostStats: 0;
 
 
-/*  Add Scrollbars
+  /*  Add Scrollbars
 /*  -  0: Hidden | 1: Visible */
 
---show-sidebarScrollbar: 0 ;
---show-memberListScrollbar: 0 ;
+  --show-sidebarScrollbar: 0;
+  --show-memberListScrollbar: 0;
 
 
-/*  Change default font
+  /*  Change default font
 /*  -  Prioritization: left to right | Fonts should be installed & may need quotation marks */
 
---font: "gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
+  --font: "gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
